syntax = "proto3";

package dnf.v1;

option go_package = "github.com/pixb/DnfGameServer/dnf-go-client/gen/dnf/v1;dnfv1";

import "dnf/v1/common.proto";
import "dnf/v1/option_types.proto";

// 系统缓冲消息类型
message RES_SYSTEM_BUFF_APPENDAGE_LIST {
  int32 error = 1;
  repeated SystemBuffAppendage appendages = 2;
}

message RES_SYSTEM_BUFF_APPENDAGE {
  int32 error = 1;
  int32 buffId = 2;
  int32 level = 3;
  int32 duration = 4;
  int32 remainingTime = 5;
}

message RES_SYSTEM_BUFF_CHANGE_LIST {
  int32 error = 1;
  repeated SystemBuffChange changes = 2;
}



message SystemBuffChange {
  int32 buffId = 1;
  int32 changeType = 2;
  int32 newValue = 3;
}

// 团队系统消息类型
message RES_SUGGEST_MOVE_PARTY {
  int32 error = 1;
  string message = 2;
}

message RES_TEAM_CHANGE {
  int32 error = 1;
  int32 teamId = 2;
  string teamName = 3;
}

message RES_TARGET_USER_PARTY_INFO {
  int32 error = 1;
  int64 userId = 2;
  int32 teamId = 3;
  string teamName = 4;
  repeated PartyMember members = 5;
}

message RES_SEARCH_PARTY_LIST {
  int32 error = 1;
  repeated PartyInfo parties = 2;
}

message RES_ROOM_LEAVE_USER {
  int32 error = 1;
  int64 userId = 2;
  string userName = 3;
}

message RES_START_MULTI_PLAY {
  int32 error = 1;
  int32 dungeonId = 2;
  int32 roomId = 3;
  repeated PartyMember members = 4;
}

message PartyMember {
  int64 userId = 1;
  string userName = 2;
  int32 level = 3;
  int32 job = 4;
}

message PartyInfo {
  int32 id = 1;
  string name = 2;
  int32 memberCount = 3;
  int32 maxMembers = 4;
  int32 levelRequirement = 5;
}
